--- a/enshrd-api/templates/result.html
+++ b/enshrd-api/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Steam ServerQuery</title>
+    <title>Enshrouded Server Infos</title>
     <style>
         body {
             background-color: #000;
